# connectlang-rpa

./: .env.example  .gitignore  README.md  connectlang_desktop.spec  pyproject.toml  roadmap.md  temp_login.py
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-reviewer.md  python-specialist.md  rpa-specialist.md  test-runner.md
.claude/hooks/: session-end.ps1  session-start.ps1  track-activity.ps1
.claude/rules/: playwright.md  python.md  rpa.md  testing.md  workflow.md
.claude/skills/playwright-rpa/: SKILL.md
.claude/skills/portfolio-docs/: SKILL.md
data/: words.example.json  words.json
docs/: architecture.md  usage.md
scripts/: build_desktop_exe.ps1  generate_icon.py
src/connectlang_rpa/: exceptions.py  main.py
src/connectlang_rpa/actions/: __init__.py  browser_actions.py
src/connectlang_rpa/config/: __init__.py  settings.py
src/connectlang_rpa/core/: __init__.py  browser.py  profile.py
src/connectlang_rpa/desktop/: app.py  main_window.py  theme.py
src/connectlang_rpa/locators/: __init__.py  vocabulary_locators.py
src/connectlang_rpa/models/: __init__.py  word_entry.py
src/connectlang_rpa/services/: __init__.py  vocabulary_service.py  word_loader.py
tests/unit/: test_browser_actions.py  test_browser_manager.py  test_desktop_word_service.py  test_execution_summary.py  test_log_streamer.py  test_logger.py  test_process_runner.py  test_profile.py  test_screenshots.py  test_session_detection.py  test_settings.py  test_vocabulary_locators.py  test_vocabulary_service.py  test_word_entry.py  test_word_loader.py
(+8 files in other folders)
